# NaNVR

./: .clang-format  .clangd  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  about.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: prepare-release.yml  queue.yml  rust.yml  wiki.yml
alvr/adb/: Cargo.toml
alvr/audio/: Cargo.toml
alvr/audio/src/: lib.rs
alvr/client_core/: Cargo.toml  README.md
alvr/client_graphics/: Cargo.toml
alvr/client_mock/: Cargo.toml
alvr/client_openxr/: Cargo.toml
alvr/client_tester/: Cargo.toml
alvr/client_tester/src/: main.rs
alvr/configuration/: Cargo.toml
alvr/dashboard/: Cargo.toml
alvr/events/: Cargo.toml
alvr/graphics/: Cargo.toml
alvr/gui_common/: Cargo.toml
alvr/launcher/: Cargo.toml
alvr/launcher/src/: actions.rs  ui.rs
alvr/net_packets/: Cargo.toml
alvr/net_sockets/: Cargo.toml
alvr/packets/: Cargo.toml
alvr/server_core/: Cargo.toml
alvr/server_io/: Cargo.toml  README.md
alvr/server_openvr/: Cargo.toml  build.rs
alvr/session/: Cargo.toml  build.rs
alvr/shared/: README.md
alvr/sockets/: Cargo.toml
alvr/sound/: Cargo.toml
alvr/system_info/: Cargo.toml
alvr/vrcompositor_wrapper/: Cargo.toml
alvr/vrcompositor_wrapper/src/: main.rs
alvr/vulkan_layer/: Cargo.toml
alvr/xtask/: Cargo.toml  README.md
nanvr/adb/: Cargo.toml
nanvr/cli/: Cargo.toml  LICENSE
nanvr/cli/src/: main.rs
nanvr/client_core/: Cargo.toml  LICENSE  README.md  cbindgen.toml
nanvr/client_graphics/: Cargo.toml
nanvr/client_openxr/: Cargo.toml  cbindgen.toml
nanvr/client_tester/: Cargo.toml  LICENSE
nanvr/client_tester/src/: main.rs
nanvr/configuration/: Cargo.toml  build.rs
nanvr/dashboard/: Cargo.toml  LICENSE
nanvr/dashboard/resources/: tips.txt
nanvr/dashboard/resources/i18n/: en_US.egl
nanvr/dashboard/src/: data_sources.rs  data_sources_wasm.rs  linux_checks.rs  logging_backend.rs  main.rs  steamvr_launcher.rs
nanvr/dashboard/src/dashboard/: mod.rs
nanvr/dashboard/src/dashboard/components/: about.rs  debug.rs  devices.rs  installation.rs  logs.rs  mod.rs  new_version_popup.rs  notifications.rs  settings.rs  setup_wizard.rs  statistics.rs
nanvr/dashboard/src/dashboard/components/settings_controls/: array.rs  boolean.rs  choice.rs  collapsible.rs  dictionary.rs  mod.rs  notice.rs  number.rs  optional.rs  section.rs  switch.rs  text.rs  vector.rs
nanvr/dashboard/src/dashboard/components/settings_controls/presets/: builtin_schema.rs  higher_order_choice.rs  mod.rs
nanvr/dashboard/src/startup_checks/: mod.rs  nvenc.rs  vaapi.rs
nanvr/dashboard/src/steamvr_launcher/: linux_steamvr.rs  mod.rs
nanvr/egui_fonts/: Cargo.toml
nanvr/events/: Cargo.toml
nanvr/events/src/: lib.rs
nanvr/launcher/: Cargo.toml
nanvr/launcher/src/: actions.rs  main.rs  ui.rs
nanvr/net_sockets/: Cargo.toml
nanvr/net_sockets/src/: control_socket.rs  lib.rs  stream_socket.rs
nanvr/net_sockets/src/backend/: tcp.rs  udp.rs
nanvr/server_core/: Cargo.toml  cbindgen.toml
nanvr/server_core/src/: bitrate.rs  c_api.rs  connection.rs  hand_gestures.rs  haptics.rs  input_mapping.rs  lib.rs  logging_backend.rs  sockets.rs  statistics.rs  web_server.rs
nanvr/server_core/src/tracking/: body.rs  face.rs  mod.rs  vmc.rs
nanvr/server_io/: Cargo.toml
nanvr/server_io/src/: firewall.rs  lib.rs  openvr_drivers.rs  openvrpaths.rs
nanvr/server_openvr/: Cargo.toml  LICENSE  build.rs
nanvr/server_openvr/cpp/alvr_server/: ChaperoneUpdater.cpp  Controller.cpp  Controller.h  FakeViveTracker.cpp  HMD.h  Logger.h  Paths.h  Utils.h  alvr_server.cpp
nanvr/server_openvr/cpp/common/: exception.cpp  packet_types.h
nanvr/server_openvr/cpp/nanvr_server/: ChaperoneUpdater.cpp  Controller.cpp  Controller.h  FakeViveTracker.cpp  HMD.cpp  HMD.h  Logger.cpp  Logger.h  NalParsing.cpp  Paths.cpp  Paths.h  PoseHistory.h  Settings.cpp  Settings.h  TrackedDevice.cpp  Utils.h  ViveTrackerProxy.cpp  ViveTrackerProxy.h  nanvr_server.cpp
nanvr/server_openvr/cpp/platform/linux/: CEncoder.cpp  CEncoder.h  CrashHandler.cpp  EncodePipeline.cpp  EncodePipeline.h  EncodePipelineNvEnc.cpp  EncodePipelineNvEnc.h  EncodePipelineSW.cpp  EncodePipelineSW.h  EncodePipelineVAAPI.cpp  EncodePipelineVAAPI.h  FormatConverter.cpp  FrameRender.cpp  FrameRender.h  ffmpeg_helper.cpp  ffmpeg_helper.h
nanvr/server_openvr/src/: graphics.rs  lib.rs  props.rs  tracking.rs
nanvr/vrcompositor_wrapper/: Cargo.toml  build.rs  drm-lease-shim.cpp
nanvr/vrcompositor_wrapper/src/: main.rs
nanvr/vulkan_layer/: Cargo.toml  LICENSE  README.md  build.rs
nanvr/vulkan_layer/layer/: device_api.cpp  layer.cpp  nanvr_x86_64.json  settings.cpp
nanvr/vulkan_layer/src/: lib.rs
nanvr/vulkan_layer/util/: logger.cpp
nanvr/vulkan_layer/wsi/headless/: swapchain.cpp
nanvr/xtask/: Cargo.toml  licenses_template.hbs
nanvr/xtask/firewall/: alvr_fw_config.sh  nanvr-firewalld.xml  nanvr_fw_config.sh  ufw-alvr  ufw-nanvr
nanvr/xtask/flatpak/: build_and_install.sh  com.valvesoftware.Steam.Utility.alvr.desktop  com.valvesoftware.Steam.Utility.alvr.json  com.valvesoftware.Steam.Utility.nanvr.desktop  com.valvesoftware.Steam.Utility.nanvr.json  run_with_adb_keys.sh  setup_xdg_shortcut.sh
nanvr/xtask/patches/: 0001-Add-AV_VAAPI_DRIVER_QUIRK_HEVC_ENCODER_ALIGN_64_16-f.patch
nanvr/xtask/resources/: alvr.desktop  driver.vrdrivermanifest
nanvr/xtask/src/: build.rs  ci.rs  command.rs  format.rs  main.rs  packaging.rs  version.rs
nanvr/xtask/src/dependencies/: android.rs  linux.rs  mod.rs
wiki/: Building-From-Source.md  Checklist.md  Controller-latency.md  Fixed-Foveated-Rendering-(FFR).md  Hand-tracking-controller-bindings.md  Headset-and-NaNVR-streamer-on-separate-networks.md  Home.md  How-ALVR-works.md  Information-and-Recommendations.md  Installation-guide.md  Installing-ALVR-and-using-SteamVR-on-Linux-through-Flatpak.md  Installing-NaNVR-and-using-SteamVR-on-Linux-through-Flatpak.md  My-game-is-not-working-properly!-Help!.md  NaNVR-over-USB.md  Roadmap.md  Settings-tutorial.md  Troubleshooting.md  _Sidebar.md
(+171 files in other folders)
