[workspace]
resolver = "2"
members = ["alvr/*"]

[workspace.package]
version = "21.0.0-dev10"
edition = "2024"
rust-version = "1.88"
authors = ["alvr-org"] # todo: changeme
license = "MIT"

[workspace.dependencies]
adb = { path = "alvr/adb" }
sound = { path = "alvr/sound" }
client_core = { path = "alvr/client_core" }
shared = { path = "alvr/shared" }
events = { path = "alvr/events" }
filepaths = { path = "alvr/filepaths" }
client_graphics = { path = "alvr/client_graphics" }
alvr_gui_common = { path = "alvr/gui_common" }
alvr_packets = { path = "alvr/packets" }
alvr_server_core = { path = "alvr/server_core"}
alvr_server_io = { path = "alvr/server_io" }
alvr_session = { path = "alvr/session" }
alvr_sockets = { path = "alvr/sockets" }
alvr_system_info = { path = "alvr/system_info" }

[profile.release]
debug = "limited"
strip = false

[profile.distribution]
inherits = "release"
lto = true
