[workspace]
resolver = "2"
members = ["nanvr/*"]

[workspace.package]
version = "1.0.2"
edition = "2024"
rust-version = "1.88"
authors = ["nanvr"]
license = "GPL-3.0"

[workspace.dependencies]
wired = { path = "nanvr/wired" }
sound = { path = "nanvr/sound" }
client_core = { path = "nanvr/client_core" }
shared = { path = "nanvr/shared" }
events = { path = "nanvr/events" }
filepaths = { path = "nanvr/filepaths" }
client_graphics = { path = "nanvr/client_graphics" }
gui_shared = { path = "nanvr/gui_shared" }
net_packets = { path = "nanvr/net_packets" }
server_core = { path = "nanvr/server_core"}
server_io = { path = "nanvr/server_io" }
configuration = { path = "nanvr/configuration" }
net_sockets = { path = "nanvr/net_sockets" }
system_info = { path = "nanvr/system_info" }
egui_fonts = { path = "nanvr/egui_fonts" }

[profile.release]
debug = "limited"
strip = false

[profile.distribution]
inherits = "release"
lto = true
