[package]
name = "alvr_audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

cpal = "0.16"
rodio = "0.21"
serde = "1"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.8.0", features = ["v0_3_49"] }
libspa-sys = "0.8.0"
