[package]
name = "client_tester"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
client_core.workspace = true
net_packets.workspace = true
alvr_session.workspace = true

eframe = "0.31"
env_logger = "0.11"
rand = "0.9"
