[package]
name = "alvr_vrcompositor_wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_filesystem.workspace = true
exec = "0.3.1"

[build-dependencies]
xshell = "0.2"
