[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
configuration.workspace = true

clap = { version = "4.5.43", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
