[package]
name = "dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wired.workspace = true
shared.workspace = true
events.workspace = true
filepaths.workspace = true
net_packets.workspace = true
configuration.workspace = true
net_sockets.workspace = true
gui_shared.workspace = true
sound.workspace = true

chrono = "0.4"
eframe = "0.32"
env_logger = "0.11"
ico = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
settings-schema = { git = "https://github.com/alvr-org/settings-schema-rs", rev = "676185f" }
statrs = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
server_io.workspace = true
sysinfo = "0.33"
tungstenite = "0.26"
ureq = { version = "3", features = ["json"] }
wgpu = "24"
libva = { package = "cros-libva", version = "0.0.7" } # Latest that works on Ubuntu 22.04
nvml-wrapper = "0.11.0"
