[package]
name = "events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
net_packets.workspace = true
configuration.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# todo: separate dashboard events into dashboard crate?