[package]
name = "launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wired.workspace = true
shared.workspace = true
filepaths.workspace = true
gui_shared.workspace = true
system_info.workspace = true

anyhow = "1"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",
    "glow",
    "wayland",                                      # Required for Linux support (including CI!)
    "web_screen_reader",
    "x11",
] }
flate2 = "1.0.18"
futures-util = "0.3.28"
ico = "0.4"
open = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
    "http2",
] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
zip = "2"