[package]
name = "net_sockets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
trace-performance = ["profiling/profile-with-tracy"]

[dependencies]
shared.workspace = true
configuration.workspace = true

bincode = { version = "2", features = ["serde"] }
profiling = { version = "1", optional = true }
serde = "1"
serde_json = "1"
socket2 = "0.5"
const_format = "0.2.34"
