[package]
name = "server_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["nanvr", "Valve Corporation"]
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
trace-performance = ["profiling/profile-with-tracy"]

[dependencies]
wired.workspace = true
sound.workspace = true
shared.workspace = true
events.workspace = true
filepaths.workspace = true
net_packets.workspace = true
server_io.workspace = true
configuration.workspace = true
net_sockets.workspace = true

ash = "0.38"
bytes = "1"
chrono = "0.4"
fern = "0.7"
flume = "0.11"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = [
    "http2",
    "server",
    "stream",
    "runtime",
    "tcp",
] }
mdns-sd = "0.13"
profiling = { version = "1", optional = true }
reqwest = "0.11" # not used but webserver does not work without it. todo: investigate
rosc = "0.10"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "net",
    "fs",
] }
tokio-tungstenite = "0.20"
tokio-util = { version = "0.7", features = ["codec"] }
serde = "1"
serde_json = "1"
sysinfo = "0.33"
const_format = "0.2.34"
