[package]
name = "server_io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
events.workspace = true
filepaths.workspace = true
net_packets.workspace = true
configuration.workspace = true

encoding_rs_io = "0.1"
dirs = "6"
runas = "^1.2" # version 1.1 is broken
serde_json = "1"
