[package]
name = "server_openvr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["nanvr", "Valve Corporation"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
gpl = [] # Enable for FFmpeg support on Windows. Always enabled on Linux

[dependencies]
shared.workspace = true
filepaths.workspace = true
net_packets.workspace = true
server_core.workspace = true
server_io.workspace = true
configuration.workspace = true

serde_json = "1"
sysinfo = "0.33"

[build-dependencies]
filepaths.workspace = true
bindgen = "0.71"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"
pkg-config = "0.3"
