[package]
name = "vrcompositor_wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
filepaths.workspace = true
exec = "0.3.1"

[build-dependencies]
shared.workspace = true
xshell = "0.2"
