[package]
name = "vulkan_layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
shared.workspace = true
filepaths.workspace = true

[build-dependencies]
shared.workspace = true

bindgen = "0.71"
cc = { version = "1", features = ["parallel"] }
pkg-config = "0.3"
walkdir = "2"
