[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
filepaths.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
pico-args = "0.5"
xshell = "0.2"
walkdir = "2"
pkg-config = "0.3"
diffy = "0.4.2"
cmd-exists = "0.1.2"
clap = { version = "4.5.43", features = ["derive"] }
